# ChangeDetection-OmInference

./: CMakeLists.txt  Readme.md  main.cpp  test.cpp
include/: ChangeDetection.h
src/: ChangeDetection.cpp
